css/style.css
/* ... */
.body a {
  color: #fff;
}

a:focus,
button:focus,
input:focus,
select:focus {
  outline: 0;
}

input:focus {
  caret-color: var(--black);
}










/* header styles */
.header {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  padding-bottom: 2rem;
  width: 100%;
}

.header__dimmed-effect {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 7rem;
  background: #0F133B;
  opacity: 0;
  -webkit-transition: var(--default-transition);
  -moz-transition: var(--default-transition);
  -ms-transition: var(--default-transition);
  -o-transition: var(--default-transition);
  transition: var(--default-transition);
}

.header__dimmed-effect.off {
  opacity: 0;
}

.header__dimmed-effect.on {
  opacity: 0.97;
}

.header__wrapper,
.header__brand,
.header__brand-link,
.header__menu,
.header__menu-list,
.header__buttons {
  display: flex;
  flex-wrap: wrap;
}

.header__wrapper {
  margin-inline: auto;
  padding-top: 2.25rem;
  align-items: center;
  justify-content: space-between;
  width: 90%;
  max-width: var(--max-width);
}

.header__brand-link {
  flex-direction: row;
}

.header__brand-link,
.header__menu-list > li > a {
  text-decoration: none;
}

.header__brand-logo {
  margin-right: 1rem;
  width: var(--logo-size);
  height: var(--logo-size);
  background: url("../imgs/svg/cryptosale-logo.svg") no-repeat;
}

.header__brand-name {
  vertical-align: middle;
  margin: 0;
  font-size: 1.375rem;
  line-height: var(--logo-size);
  color: var(--light-blue);
}

.header__menu-list {
  margin: 0;
  gap: min(2vw, 2.25rem);
  line-height: var(--logo-size);
}

.header__menu-list > li > a,
.header__sign-up-button,
.header__login-button,
.header__burger-menu-button {
  -webkit-transition: var(--default-transition);
  -moz-transition: var(--default-transition);
  -ms-transition: var(--default-transition);
  -o-transition: var(--default-transition);
  transition: var(--default-transition);
}

.header__menu-list > li > a:hover, 
.header__menu-list > li > a:active,
.header__sign-up-button:hover,
.header__sign-up-button:active,
.header__burger-menu-button:hover,
.header__burger-menu-button:active {
  color: #CEEDFF;
  opacity: 0.8;
}

.header__buttons {
  height: var(--logo-size);
  align-items: center;
}

.header__sign-up-button {
  margin-right: min(3rem, 1.5vw);
  border-radius: 20px;
  width: 146px;
  height: 38px;
  background: var(--light-blue);
}

.header__sign-up-button:hover,
.header__sign-up-button:active {
  color: initial;
}

.header__login-button {  
  width: 105px;
  height: 38px;
  border: 2px solid var(--light-blue);
  border-radius: 20px;
  color: #fff;
  background-color: transparent;
}

.header__login-button:hover,
.header__login-button:active {
  background-color: rgba(206, 237, 255, 0.15);
}

.header__burger-menu {
  display: flex;
  justify-content: center;
  align-items: center;
  width: var(--logo-size);
  height: var(--logo-size);  
}

.header__burger-menu-button {
  width: 30px;
  height: 30px;
  background: url("../imgs/svg/burger-menu.svg") no-repeat;
}





/* responsive header styles */
@media screen and (max-width: 767px) {
  .header__brand-logo {
    margin-right: 0;
  }

  .header__brand-name {
    display: none;
  }

  .header__menu {
    display: none;
  }

  .header__sign-up-button {
    margin-right: 0;
    width: 35vw;
  }

  .header__login-button {
    display: none;
  }

  .header__burger-menu {
    display: flex;
  }
}

@media screen and (min-width: 768px) { 
  .header__brand-logo {
    margin-right: 1rem;
  }

  .header__brand-name {
    display: flex;
  }

  .header__menu {
    display: none;
  }

  .header__buttons {
    position: absolute;
    right: clamp(100px, 10%, 10vw);
  }

  .header__burger-menu {
    display: flex;
  }
}

@media screen and (min-width: 1080px) { 
  .header__menu {
    display: flex;
  }

  .header__menu-list > li:first-child {
    display: none;
  }

  .header__buttons {
    position: relative;
    right: 0;
  }

  .header__burger-menu {
    display: none;
  }
}

@media screen and (min-width: 1200px) {
  .header__menu-list > li:first-child {
    display: flex;
  }
}









/* burger menu styles */
.header__burger-menu-window {
  position: fixed;
  z-index: 666;
  /* padding-top: 150px; */
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  backdrop-filter: blur(5px);
  background-color: rgba(0,0,0,0.4);
  -webkit-transition: var(--modal-transition);
  -moz-transition: var(--modal-transition);
  -ms-transition: var(--modal-transition);
  -o-transition: var(--modal-transition);
  transition: var(--modal-transition);
}

.header__burger-menu-window.off {
  opacity: 0;
}

.header__burger-menu-window.off > .burger-menu-window__content {
  margin-right: -100%;
}

.header__burger-menu-window.invisible {
  display: none;
}

.header__burger-menu-window.on {
  opacity: 1;
}

.header__burger-menu-window.on > .burger-menu-window__content {
  margin-right: 0;
}

.header__burger-menu-window.visible {
  display: block;
}

.burger-menu-window__content {
  position: relative;
  float: right;
  width: max(274px, 40%);
  height: 100%;
  background-color: #CEEDFF;
  padding: 1.25rem;
  -webkit-transition: var(--modal-transition);
  -moz-transition: var(--modal-transition);
  -ms-transition: var(--modal-transition);
  -o-transition: var(--modal-transition);
  transition: var(--modal-transition);
}

.burger-menu-window__content > div {
  margin-top: 4.5rem;
  padding-left: 2.375rem;
}

.burger-menu-window__close {
  position: absolute;
  left: 80%;
  top: 40px;
  font-size: 1.75rem;
  font-weight: bold;
  color: var(--black);
  -webkit-transition: var(--default-transition);
  -moz-transition: var(--default-transition);
  -ms-transition: var(--default-transition);
  -o-transition: var(--default-transition);
  transition: var(--default-transition);
}

.burger-menu-window__close:hover,
.burger-menu-window__close:focus {
  opacity: 0.6;
  text-decoration: none;
  cursor: pointer;
}
/* ... */

